--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,8 +1,10 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00063-g80d731d-dirty Configuration
+# Buildroot 2013.05-02615-g91062e0-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
+# BR2_arcle is not set
+# BR2_arceb is not set
 BR2_arm=y
 # BR2_armeb is not set
 # BR2_aarch64 is not set
@@ -26,10 +28,7 @@ BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_TUNE="xscale"
 BR2_GCC_TARGET_ARCH="armv5te"
 BR2_GCC_TARGET_ABI="aapcs-linux"
-# BR2_generic_arm is not set
 # BR2_arm7tdmi is not set
-# BR2_arm610 is not set
-# BR2_arm710 is not set
 # BR2_arm720t is not set
 # BR2_arm920t is not set
 # BR2_arm922t is not set
@@ -43,8 +42,9 @@ BR2_GCC_TARGET_ABI="aapcs-linux"
 # BR2_cortex_a8 is not set
 # BR2_cortex_a9 is not set
 # BR2_cortex_a15 is not set
-# BR2_sa110 is not set
-# BR2_sa1100 is not set
+# BR2_fa526 is not set
+# BR2_pj4 is not set
+# BR2_strongarm is not set
 BR2_xscale=y
 # BR2_iwmmxt is not set
 # BR2_arm1136jf_s is not set
@@ -98,13 +98,13 @@ BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_S is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
+BR2_GLOBAL_PATCH_DIR=""
 
 #
 # Toolchain
 #
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
-# BR2_TOOLCHAIN_CTNG is not set
 
 #
 # Kernel Header Options
@@ -112,8 +112,8 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_KERNEL_HEADERS_3_0 is not set
 # BR2_KERNEL_HEADERS_3_2 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
-# BR2_KERNEL_HEADERS_3_6 is not set
-# BR2_KERNEL_HEADERS_3_7 is not set
+# BR2_KERNEL_HEADERS_3_8 is not set
+# BR2_KERNEL_HEADERS_3_9 is not set
 BR2_KERNEL_HEADERS_VERSION=y
 # BR2_KERNEL_HEADERS_SNAP is not set
 BR2_DEFAULT_KERNEL_VERSION="3.0.4"
@@ -127,7 +127,6 @@ BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
 BR2_UCLIBC_VERSION_STRING="0.9.32.1"
 BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
-# BR2_PTHREAD_DEBUG is not set
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 BR2_UCLIBC_ARM_TYPE="ARM_XSCALE"
 
@@ -139,17 +138,20 @@ BR2_UCLIBC_ARM_TYPE="ARM_XSCALE"
 BR2_BINUTILS_VERSION_2_21_1=y
 # BR2_BINUTILS_VERSION_2_22 is not set
 # BR2_BINUTILS_VERSION_2_23_1 is not set
+# BR2_BINUTILS_VERSION_2_23_2 is not set
 BR2_BINUTILS_VERSION="2.21.1"
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
 # GCC Options
 #
+BR2_GCC_NEEDS_MPC=y
 # BR2_GCC_VERSION_4_3_X is not set
 # BR2_GCC_VERSION_4_4_X is not set
 # BR2_GCC_VERSION_4_5_X is not set
 # BR2_GCC_VERSION_4_6_X is not set
 BR2_GCC_VERSION_4_7_X=y
+# BR2_GCC_VERSION_4_8_X is not set
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.7.3"
@@ -159,20 +161,13 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 BR2_GCC_SHARED_LIBGCC=y
 BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_OPENMP is not set
-
-#
-# Gdb Options
-#
-# BR2_PACKAGE_GDB is not set
-# BR2_PACKAGE_GDB_SERVER is not set
-# BR2_PACKAGE_GDB_HOST is not set
+# BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
-BR2_TOOLCHAIN_HAS_THREADS_DEBUG_IF_NEEDED=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en"
@@ -200,6 +195,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
 BR2_PTHREADS_NATIVE=y
+# BR2_PTHREAD_DEBUG is not set
 # BR2_ELF2FLT is not set
 
 #
@@ -530,13 +526,22 @@ BR2_PACKAGE_MPG123=y
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DMALLOC is not set
+
+#
+# gdb/gdbserver require a toolchain with thread and thread debug support
+#
+# BR2_PACKAGE_IOZONE is not set
 BR2_PACKAGE_KEXEC=y
 BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-# BR2_PACKAGE_LTP_TESTSUITE is not set
+
+#
+# ltp-testsuite requires a toolchain with IPV6, RPC and thread support
+#
 # BR2_PACKAGE_LTTNG_MODULES is not set
+# BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_MEMSTAT is not set
 # BR2_PACKAGE_NETPERF is not set
@@ -565,11 +570,9 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_GAWK is not set
 BR2_PACKAGE_GETTEXT=y
 # BR2_PACKAGE_GETTEXT_TOOLS is not set
-BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
-# BR2_PACKAGE_MPC is not set
-# BR2_PACKAGE_MPFR is not set
+# BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_LIBTOOL is not set
 # BR2_PACKAGE_M4 is not set
 # BR2_PACKAGE_PATCH is not set
@@ -577,7 +580,6 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_SED is not set
 # BR2_PACKAGE_SSTRIP is not set
 # BR2_PACKAGE_TAR is not set
-# BR2_PACKAGE_VALA is not set
 
 #
 # Games
@@ -592,6 +594,8 @@ BR2_PACKAGE_GMP=y
 #
 # Graphic applications
 #
+# BR2_PACKAGE_GNUPLOT is not set
+# BR2_PACKAGE_JHEAD is not set
 # BR2_PACKAGE_RRDTOOL is not set
 
 #
@@ -614,12 +618,15 @@ BR2_PACKAGE_GMP=y
 #
 # BR2_PACKAGE_EFL is not set
 # BR2_PACKAGE_QT is not set
+# BR2_PACKAGE_QT5 is not set
 # BR2_PACKAGE_XORG7 is not set
+# BR2_PACKAGE_WESTON is not set
 
 #
 # X libraries and helper libraries
 #
 # BR2_PACKAGE_LIBERATION is not set
+# BR2_PACKAGE_XKEYBOARD_CONFIG is not set
 
 #
 # X Window managers
@@ -642,6 +649,9 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_CURLFTPFS is not set
 # BR2_PACKAGE_DOSFSTOOLS is not set
 # BR2_PACKAGE_E2FSPROGS is not set
+# BR2_PACKAGE_EXFAT is not set
+# BR2_PACKAGE_EXFAT_UTILS is not set
+# BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENROMFS is not set
@@ -746,13 +756,14 @@ BR2_DBUS_LIBXML2=y
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EEPROG is not set
 # BR2_PACKAGE_EVTEST is not set
+# BR2_PACKAGE_FAN_CTRL is not set
 # BR2_PACKAGE_FCONFIG is not set
 # BR2_PACKAGE_FIS is not set
 # BR2_PACKAGE_FMTOOLS is not set
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
-# BR2_PACKAGE_GDISK is not set
 # BR2_PACKAGE_GPSD is not set
+# BR2_PACKAGE_GPTFDISK is not set
 BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_GVFS_AFP is not set
 # BR2_PACKAGE_HDPARM is not set
@@ -799,6 +810,7 @@ BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_TI_UTILS is not set
 BR2_PACKAGE_UBOOT_TOOLS=y
 # BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE is not set
+# BR2_PACKAGE_UBOOT_TOOLS_MKENVIMAGE is not set
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 BR2_PACKAGE_UDEV=y
 # BR2_PACKAGE_UDEV_ACL is not set
@@ -819,10 +831,12 @@ BR2_PACKAGE_USBMOUNT=y
 # Interpreter languages and scripting
 #
 # BR2_PACKAGE_ERLANG is not set
+# BR2_PACKAGE_ENSCRIPT is not set
 # BR2_PACKAGE_HASERL is not set
 # BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
+# BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
@@ -890,6 +904,7 @@ BR2_PACKAGE_ZLIB=y
 # Crypto
 #
 # BR2_PACKAGE_BEECRYPT is not set
+# BR2_PACKAGE_CRYPTODEV is not set
 BR2_PACKAGE_GNUTLS=y
 # BR2_PACKAGE_GNUTLS_TOOLS is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
@@ -899,11 +914,9 @@ BR2_PACKAGE_GNUTLS=y
 # BR2_PACKAGE_LIBNSS is not set
 # BR2_PACKAGE_LIBSHA1 is not set
 BR2_PACKAGE_NETTLE=y
-# BR2_PACKAGE_OCF_LINUX is not set
 BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_OPENSSL_BIN is not set
 # BR2_PACKAGE_OPENSSL_ENGINES is not set
-# BR2_PACKAGE_OPENSSL_OCF is not set
 # BR2_PACKAGE_POLARSSL is not set
 
 #
@@ -912,6 +925,7 @@ BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_BERKELEYDB is not set
 # BR2_PACKAGE_GDBM is not set
 # BR2_PACKAGE_MYSQL_CLIENT is not set
+# BR2_PACKAGE_REDIS is not set
 
 #
 # sqlcipher conflicts with sqlite
@@ -943,6 +957,7 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_IMLIB2 is not set
 # BR2_PACKAGE_JPEG is not set
+# BR2_PACKAGE_LCMS2 is not set
 # BR2_PACKAGE_LIBART is not set
 # BR2_PACKAGE_LIBDMTX is not set
 # BR2_PACKAGE_LIBEXIF is not set
@@ -956,11 +971,14 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_OPENCV is not set
 # BR2_PACKAGE_PANGO is not set
 # BR2_PACKAGE_PIXMAN is not set
+# BR2_PACKAGE_POPPLER is not set
 # BR2_PACKAGE_TIFF is not set
+# BR2_PACKAGE_WAYLAND is not set
 
 #
 # webkit requires C++, WCHAR in toolchain and libgtk2
 #
+# BR2_PACKAGE_WEBP is not set
 # BR2_PACKAGE_ZXING is not set
 
 #
@@ -979,12 +997,15 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBNFC_LLCP is not set
+# BR2_PACKAGE_LIBSERIAL is not set
 BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBV4L is not set
+# BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
+# BR2_PACKAGE_URG is not set
 
 #
 # Javascript
@@ -992,9 +1013,12 @@ BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_EXPLORERCANVAS is not set
 # BR2_PACKAGE_FLOT is not set
 # BR2_PACKAGE_JQUERY is not set
+# BR2_PACKAGE_JQUERY_KEYBOARD is not set
 # BR2_PACKAGE_JQUERY_SPARKLINE is not set
+# BR2_PACKAGE_JQUERY_UI is not set
 # BR2_PACKAGE_JQUERY_VALIDATION is not set
 # BR2_PACKAGE_JSMIN is not set
+# BR2_PACKAGE_JSON_JAVASCRIPT is not set
 
 #
 # Multimedia
@@ -1017,6 +1041,9 @@ BR2_PACKAGE_LIBOGG=y
 #
 # Networking
 #
+# BR2_PACKAGE_CZMQ is not set
+# BR2_PACKAGE_CPPZMQ is not set
+# BR2_PACKAGE_FILEMQ is not set
 BR2_PACKAGE_GLIB_NETWORKING=y
 # BR2_PACKAGE_LIBCGI is not set
 # BR2_PACKAGE_LIBCGICC is not set
@@ -1053,10 +1080,15 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_LIBTORRENT is not set
 # BR2_PACKAGE_LIBUPNP is not set
 # BR2_PACKAGE_LIBVNCSERVER is not set
+# BR2_PACKAGE_LIBWEBSOCKETS is not set
+# BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_SLIRP is not set
 # BR2_PACKAGE_USBREDIR is not set
+# BR2_PACKAGE_WVSTREAMS is not set
 # BR2_PACKAGE_ZEROMQ is not set
+# BR2_PACKAGE_ZMQPP is not set
+# BR2_PACKAGE_ZYRE is not set
 
 #
 # Other
@@ -1069,6 +1101,10 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 # BR2_PACKAGE_BOOST is not set
+# BR2_PACKAGE_GLIBMM is not set
+BR2_PACKAGE_GMP=y
+# BR2_PACKAGE_GSL is not set
+# BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
 # BR2_PACKAGE_LIBCAP is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
@@ -1077,20 +1113,27 @@ BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBEVENT is not set
 # BR2_PACKAGE_LIBEV is not set
 BR2_PACKAGE_LIBFFI=y
-# BR2_PACKAGE_GSL is not set
 BR2_PACKAGE_LIBGLIB2=y
 # BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBNSPR is not set
+# BR2_PACKAGE_LIBPFM4 is not set
+# BR2_PACKAGE_LIBPTHSEM is not set
 # BR2_PACKAGE_LIBSIGC is not set
+# BR2_PACKAGE_LIBSIGSEGV is not set
+# BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
 BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_LIBURCU is not set
 # BR2_PACKAGE_LINUX_PAM is not set
+# BR2_PACKAGE_LOG4CXX is not set
 # BR2_PACKAGE_LTTNG_LIBUST is not set
+# BR2_PACKAGE_MPC is not set
+# BR2_PACKAGE_MPFR is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
 # BR2_PACKAGE_ORC is not set
 # BR2_PACKAGE_POCO is not set
 # BR2_PACKAGE_PROTOBUF is not set
+# BR2_PACKAGE_PROTOBUF_C is not set
 # BR2_PACKAGE_SCHIFRA is not set
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
 
@@ -1118,12 +1161,17 @@ BR2_PACKAGE_POPT=y
 # BR2_PACKAGE_CJSON is not set
 BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
+# BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
+# BR2_PACKAGE_JSON_GLIB is not set
+# BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 BR2_PACKAGE_LIBXML2=y
+# BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXSLT is not set
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
+# BR2_PACKAGE_RAPIDJSON is not set
 # BR2_PACKAGE_XERCES is not set
 # BR2_PACKAGE_YAJL is not set
 
@@ -1144,6 +1192,7 @@ BR2_PACKAGE_SHARED_MIME_INFO=y
 #
 # Networking applications
 #
+# BR2_PACKAGE_AIRCRACK_NG is not set
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_AUTHSAE is not set
@@ -1151,12 +1200,14 @@ BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_AUTOIPD=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 # BR2_PACKAGE_AXEL is not set
+# BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BLUEZ_UTILS is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
 # BR2_PACKAGE_CAN_UTILS is not set
+# BR2_PACKAGE_CHRONY is not set
 
 #
 # connman needs a toolchain with IPv6, WCHAR, thread and resolver support
@@ -1195,11 +1246,14 @@ BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IW=y
 # BR2_PACKAGE_KISMET is not set
 # BR2_PACKAGE_LIGHTTPD is not set
+# BR2_PACKAGE_LINKNX is not set
 # BR2_PACKAGE_LINKS is not set
 # BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
+# BR2_PACKAGE_MONGOOSE is not set
+# BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
@@ -1221,6 +1275,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_NETSTAT_NAT is not set
 # BR2_PACKAGE_NETWORK_MANAGER is not set
 # BR2_PACKAGE_NFACCT is not set
+# BR2_PACKAGE_NMAP is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
@@ -1228,6 +1283,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
+# BR2_PACKAGE_OPENOBEX is not set
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
@@ -1314,6 +1370,7 @@ BR2_PACKAGE_SAMBA_GAMIN=y
 # BR2_PACKAGE_UDPCAST is not set
 # BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
+# BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
@@ -1322,6 +1379,7 @@ BR2_PACKAGE_SAMBA_GAMIN=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 BR2_PACKAGE_WIRELESS_TOOLS=y
 # BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
+# BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 # BR2_PACKAGE_WPA_SUPPLICANT_EAP is not set
 # BR2_PACKAGE_WPA_SUPPLICANT_CLI is not set
@@ -1331,6 +1389,7 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+# BR2_PACKAGE_WVDIAL is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
 
@@ -1356,6 +1415,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 # BR2_PACKAGE_BASH is not set
 # BR2_PACKAGE_DASH is not set
 # BR2_PACKAGE_DIALOG is not set
+# BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
@@ -1395,32 +1455,10 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 #
 # BR2_PACKAGE_SYSTEMD is not set
 BR2_PACKAGE_UTIL_LINUX=y
-# BR2_PACKAGE_UTIL_LINUX_BASIC is not set
-# BR2_PACKAGE_UTIL_LINUX_MOUNT is not set
-# BR2_PACKAGE_UTIL_LINUX_FSCK is not set
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
 # BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-# BR2_PACKAGE_UTIL_LINUX_UUIDD is not set
-BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-# BR2_PACKAGE_UTIL_LINUX_AGETTY is not set
-# BR2_PACKAGE_UTIL_LINUX_CRAMFS is not set
-# BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_FALLOCATE is not set
-# BR2_PACKAGE_UTIL_LINUX_UNSHARE is not set
-# BR2_PACKAGE_UTIL_LINUX_RENAME is not set
-# BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WALL is not set
-# BR2_PACKAGE_UTIL_LINUX_PARTX is not set
-# BR2_PACKAGE_UTIL_LINUX_ARCH is not set
-# BR2_PACKAGE_UTIL_LINUX_INIT is not set
-# BR2_PACKAGE_UTIL_LINUX_KILL is not set
-# BR2_PACKAGE_UTIL_LINUX_LAST is not set
-# BR2_PACKAGE_UTIL_LINUX_MESG is not set
-# BR2_PACKAGE_UTIL_LINUX_RAW is not set
-# BR2_PACKAGE_UTIL_LINUX_RESET is not set
-# BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WRITE is not set
+# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
 
 #
 # Text editors and viewers
@@ -1458,7 +1496,12 @@ BR2_PACKAGE_WEB_SERVICE=y
 # Host utilities
 #
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
+# BR2_PACKAGE_HOST_DOSFSTOOLS is not set
+# BR2_PACKAGE_HOST_E2FSPROGS is not set
+# BR2_PACKAGE_HOST_GENIMAGE is not set
+# BR2_PACKAGE_HOST_GENPART is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
+# BR2_PACKAGE_HOST_MTOOLS is not set
 # BR2_PACKAGE_HOST_OMAP_U_BOOT_UTILS is not set
 # BR2_PACKAGE_HOST_OPENOCD is not set
 # BR2_PACKAGE_HOST_SAM_BA is not set
@@ -1480,6 +1523,8 @@ BR2_TARGET_ROOTFS_TAR=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 # BR2_TARGET_ROOTFS_TAR_BZIP2 is not set
 # BR2_TARGET_ROOTFS_TAR_LZMA is not set
+# BR2_TARGET_ROOTFS_TAR_LZO is not set
+# BR2_TARGET_ROOTFS_TAR_XZ is not set
 BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # BR2_TARGET_ROOTFS_UBIFS is not set
 
@@ -1494,7 +1539,7 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # Kernel
 #
 BR2_LINUX_KERNEL=y
-# BR2_LINUX_KERNEL_3_7 is not set
+# BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
@@ -1513,24 +1558,32 @@ BR2_LINUX_KERNEL_UIMAGE=y
 # BR2_LINUX_KERNEL_APPENDED_ZIMAGE is not set
 # BR2_LINUX_KERNEL_VMLINUX is not set
 # BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM is not set
+BR2_LINUX_KERNEL_UIMAGE_LOADADDR=""
 # BR2_LINUX_KERNEL_DTS_SUPPORT is not set
-BR2_LINUX_KERNEL_LOADADDR=""
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 
 #
 # Linux Kernel Extensions
 #
 # BR2_LINUX_KERNEL_EXT_XENOMAI is not set
-# BR2_LINUX_KERNEL_EXT_OCF_LINUX is not set
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
 
 #
 # Legacy config options
 #
+# BR2_sa110 is not set
+# BR2_sa1100 is not set
+# BR2_PACKAGE_GDISK is not set
+# BR2_PACKAGE_GDISK_GDISK is not set
+# BR2_PACKAGE_GDISK_SGDISK is not set
+# BR2_PACKAGE_GDB_HOST is not set
+# BR2_PACKAGE_DIRECTB_DITHER_RGB16 is not set
+# BR2_PACKAGE_DIRECTB_TESTS is not set
 # BR2_PACKAGE_CUSTOMIZE is not set
 # BR2_PACKAGE_XSERVER_xorg is not set
 # BR2_PACKAGE_XSERVER_tinyx is not set
-# BR2_PACKAGE_PTHREAD_STUBS is not set
 # BR2_PACKAGE_GETTEXT_STATIC is not set
 # BR2_PACKAGE_LIBINTL is not set
 # BR2_PACKAGE_INPUT_TOOLS_EVTEST is not set
+# BR2_BFIN_FDPIC is not set
+# BR2_BFIN_FLAT is not set
