--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,8 +1,10 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00063-g80d731d-dirty Configuration
+# Buildroot 2013.05-02615-g91062e0-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
+# BR2_arcle is not set
+# BR2_arceb is not set
 # BR2_arm is not set
 # BR2_armeb is not set
 # BR2_aarch64 is not set
@@ -101,13 +103,13 @@ BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_S is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
+BR2_GLOBAL_PATCH_DIR=""
 
 #
 # Toolchain
 #
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
-# BR2_TOOLCHAIN_CTNG is not set
 
 #
 # Kernel Header Options
@@ -115,8 +117,8 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_KERNEL_HEADERS_3_0 is not set
 # BR2_KERNEL_HEADERS_3_2 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
-# BR2_KERNEL_HEADERS_3_6 is not set
-# BR2_KERNEL_HEADERS_3_7 is not set
+# BR2_KERNEL_HEADERS_3_8 is not set
+# BR2_KERNEL_HEADERS_3_9 is not set
 BR2_KERNEL_HEADERS_VERSION=y
 # BR2_KERNEL_HEADERS_SNAP is not set
 BR2_DEFAULT_KERNEL_VERSION="3.9.6"
@@ -130,7 +132,6 @@ BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
 BR2_UCLIBC_VERSION_STRING="0.9.32.1"
 BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
-BR2_PTHREAD_DEBUG=y
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 
 #
@@ -141,17 +142,20 @@ BR2_PTHREAD_DEBUG=y
 BR2_BINUTILS_VERSION_2_21_1=y
 # BR2_BINUTILS_VERSION_2_22 is not set
 # BR2_BINUTILS_VERSION_2_23_1 is not set
+# BR2_BINUTILS_VERSION_2_23_2 is not set
 BR2_BINUTILS_VERSION="2.21.1"
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
 # GCC Options
 #
+BR2_GCC_NEEDS_MPC=y
 # BR2_GCC_VERSION_4_3_X is not set
 # BR2_GCC_VERSION_4_4_X is not set
 # BR2_GCC_VERSION_4_5_X is not set
 # BR2_GCC_VERSION_4_6_X is not set
 BR2_GCC_VERSION_4_7_X=y
+# BR2_GCC_VERSION_4_8_X is not set
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.7.3"
@@ -161,23 +165,14 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 BR2_GCC_SHARED_LIBGCC=y
 BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_OPENMP is not set
-
-#
-# Gdb Options
-#
-BR2_PACKAGE_GDB=y
-BR2_PACKAGE_GDB_SERVER=y
-# BR2_PACKAGE_GDB_HOST is not set
-# BR2_GDB_VERSION_7_4 is not set
-BR2_GDB_VERSION_7_5=y
-BR2_GDB_VERSION="7.5.1"
+# BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
-BR2_TOOLCHAIN_HAS_THREADS_DEBUG_IF_NEEDED=y
+BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en"
@@ -203,6 +198,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
 BR2_PTHREADS_NATIVE=y
+BR2_PTHREAD_DEBUG=y
 
 #
 # System configuration
@@ -292,13 +288,21 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DMALLOC is not set
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+# BR2_PACKAGE_GDB_DEBUGGER is not set
+# BR2_PACKAGE_IOZONE is not set
 BR2_PACKAGE_KEXEC=y
 BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-# BR2_PACKAGE_LTP_TESTSUITE is not set
+
+#
+# ltp-testsuite requires a toolchain with IPV6, RPC and thread support
+#
 # BR2_PACKAGE_LTTNG_MODULES is not set
+# BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_MEMSTAT is not set
 # BR2_PACKAGE_NETPERF is not set
@@ -329,11 +333,9 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_GAWK is not set
 BR2_PACKAGE_GETTEXT=y
 # BR2_PACKAGE_GETTEXT_TOOLS is not set
-BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
-# BR2_PACKAGE_MPC is not set
-# BR2_PACKAGE_MPFR is not set
+# BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_LIBTOOL is not set
 # BR2_PACKAGE_M4 is not set
 # BR2_PACKAGE_PATCH is not set
@@ -341,7 +343,6 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_SED is not set
 # BR2_PACKAGE_SSTRIP is not set
 # BR2_PACKAGE_TAR is not set
-# BR2_PACKAGE_VALA is not set
 # BR2_PACKAGE_YASM is not set
 
 #
@@ -357,6 +358,8 @@ BR2_PACKAGE_GMP=y
 #
 # Graphic applications
 #
+# BR2_PACKAGE_GNUPLOT is not set
+# BR2_PACKAGE_JHEAD is not set
 # BR2_PACKAGE_RRDTOOL is not set
 
 #
@@ -379,12 +382,15 @@ BR2_PACKAGE_GMP=y
 #
 # BR2_PACKAGE_EFL is not set
 # BR2_PACKAGE_QT is not set
+# BR2_PACKAGE_QT5 is not set
 # BR2_PACKAGE_XORG7 is not set
+# BR2_PACKAGE_WESTON is not set
 
 #
 # X libraries and helper libraries
 #
 # BR2_PACKAGE_LIBERATION is not set
+# BR2_PACKAGE_XKEYBOARD_CONFIG is not set
 
 #
 # X Window managers
@@ -427,6 +433,9 @@ BR2_PACKAGE_E2FSPROGS_MKLOSTFOUND=y
 # BR2_PACKAGE_E2FSPROGS_RESIZE2FS is not set
 BR2_PACKAGE_E2FSPROGS_TUNE2FS=y
 BR2_PACKAGE_E2FSPROGS_UUIDGEN=y
+# BR2_PACKAGE_EXFAT is not set
+# BR2_PACKAGE_EXFAT_UTILS is not set
+# BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENROMFS is not set
@@ -465,14 +474,15 @@ BR2_PACKAGE_DMIDECODE=y
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EEPROG is not set
 # BR2_PACKAGE_EVTEST is not set
+# BR2_PACKAGE_FAN_CTRL is not set
 # BR2_PACKAGE_FLASHROM is not set
 # BR2_PACKAGE_FCONFIG is not set
 # BR2_PACKAGE_FIS is not set
 # BR2_PACKAGE_FMTOOLS is not set
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
-# BR2_PACKAGE_GDISK is not set
 # BR2_PACKAGE_GPSD is not set
+# BR2_PACKAGE_GPTFDISK is not set
 BR2_PACKAGE_GVFS=y
 BR2_PACKAGE_GVFS_AFP=y
 # BR2_PACKAGE_HDPARM is not set
@@ -533,10 +543,12 @@ BR2_PACKAGE_USBMOUNT=y
 # Interpreter languages and scripting
 #
 # BR2_PACKAGE_ERLANG is not set
+# BR2_PACKAGE_ENSCRIPT is not set
 # BR2_PACKAGE_HASERL is not set
 # BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
+# BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
@@ -589,6 +601,7 @@ BR2_PACKAGE_ZLIB=y
 # Crypto
 #
 # BR2_PACKAGE_BEECRYPT is not set
+# BR2_PACKAGE_CRYPTODEV is not set
 BR2_PACKAGE_GNUTLS=y
 # BR2_PACKAGE_GNUTLS_TOOLS is not set
 BR2_PACKAGE_LIBGCRYPT=y
@@ -598,11 +611,9 @@ BR2_PACKAGE_LIBGPG_ERROR=y
 # BR2_PACKAGE_LIBNSS is not set
 # BR2_PACKAGE_LIBSHA1 is not set
 BR2_PACKAGE_NETTLE=y
-# BR2_PACKAGE_OCF_LINUX is not set
 BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_OPENSSL_BIN is not set
 # BR2_PACKAGE_OPENSSL_ENGINES is not set
-# BR2_PACKAGE_OPENSSL_OCF is not set
 # BR2_PACKAGE_POLARSSL is not set
 
 #
@@ -611,6 +622,7 @@ BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_BERKELEYDB is not set
 # BR2_PACKAGE_GDBM is not set
 # BR2_PACKAGE_MYSQL_CLIENT is not set
+# BR2_PACKAGE_REDIS is not set
 
 #
 # sqlcipher conflicts with sqlite
@@ -642,6 +654,7 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_IMLIB2 is not set
 # BR2_PACKAGE_JPEG is not set
+# BR2_PACKAGE_LCMS2 is not set
 # BR2_PACKAGE_LIBART is not set
 # BR2_PACKAGE_LIBDMTX is not set
 # BR2_PACKAGE_LIBEXIF is not set
@@ -655,11 +668,14 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_OPENCV is not set
 # BR2_PACKAGE_PANGO is not set
 # BR2_PACKAGE_PIXMAN is not set
+# BR2_PACKAGE_POPPLER is not set
 # BR2_PACKAGE_TIFF is not set
+# BR2_PACKAGE_WAYLAND is not set
 
 #
 # webkit requires C++, WCHAR in toolchain and libgtk2
 #
+# BR2_PACKAGE_WEBP is not set
 # BR2_PACKAGE_ZXING is not set
 
 #
@@ -677,12 +693,15 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBNFC_LLCP is not set
+# BR2_PACKAGE_LIBSERIAL is not set
 BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBV4L is not set
+# BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
+# BR2_PACKAGE_URG is not set
 
 #
 # Javascript
@@ -690,9 +709,12 @@ BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_EXPLORERCANVAS is not set
 # BR2_PACKAGE_FLOT is not set
 # BR2_PACKAGE_JQUERY is not set
+# BR2_PACKAGE_JQUERY_KEYBOARD is not set
 # BR2_PACKAGE_JQUERY_SPARKLINE is not set
+# BR2_PACKAGE_JQUERY_UI is not set
 # BR2_PACKAGE_JQUERY_VALIDATION is not set
 # BR2_PACKAGE_JSMIN is not set
+# BR2_PACKAGE_JSON_JAVASCRIPT is not set
 
 #
 # Multimedia
@@ -712,6 +734,9 @@ BR2_PACKAGE_LIBOGG=y
 #
 # Networking
 #
+# BR2_PACKAGE_CZMQ is not set
+# BR2_PACKAGE_CPPZMQ is not set
+# BR2_PACKAGE_FILEMQ is not set
 BR2_PACKAGE_GLIB_NETWORKING=y
 # BR2_PACKAGE_LIBCGI is not set
 # BR2_PACKAGE_LIBCGICC is not set
@@ -748,10 +773,15 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_LIBTORRENT is not set
 # BR2_PACKAGE_LIBUPNP is not set
 # BR2_PACKAGE_LIBVNCSERVER is not set
+# BR2_PACKAGE_LIBWEBSOCKETS is not set
+# BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_SLIRP is not set
 # BR2_PACKAGE_USBREDIR is not set
+# BR2_PACKAGE_WVSTREAMS is not set
 # BR2_PACKAGE_ZEROMQ is not set
+# BR2_PACKAGE_ZMQPP is not set
+# BR2_PACKAGE_ZYRE is not set
 
 #
 # Other
@@ -763,6 +793,10 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 # BR2_PACKAGE_BOOST is not set
+# BR2_PACKAGE_GLIBMM is not set
+BR2_PACKAGE_GMP=y
+# BR2_PACKAGE_GSL is not set
+# BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
 # BR2_PACKAGE_LIBCAP is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
@@ -771,21 +805,28 @@ BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBEVENT is not set
 # BR2_PACKAGE_LIBEV is not set
 BR2_PACKAGE_LIBFFI=y
-# BR2_PACKAGE_GSL is not set
 BR2_PACKAGE_LIBGLIB2=y
 # BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBNSPR is not set
+# BR2_PACKAGE_LIBPFM4 is not set
+# BR2_PACKAGE_LIBPTHSEM is not set
 # BR2_PACKAGE_LIBSIGC is not set
+# BR2_PACKAGE_LIBSIGSEGV is not set
+# BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
 BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_LIBSECCOMP is not set
 # BR2_PACKAGE_LIBURCU is not set
 # BR2_PACKAGE_LINUX_PAM is not set
+# BR2_PACKAGE_LOG4CXX is not set
 # BR2_PACKAGE_LTTNG_LIBUST is not set
+# BR2_PACKAGE_MPC is not set
+# BR2_PACKAGE_MPFR is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
 # BR2_PACKAGE_ORC is not set
 # BR2_PACKAGE_POCO is not set
 # BR2_PACKAGE_PROTOBUF is not set
+# BR2_PACKAGE_PROTOBUF_C is not set
 # BR2_PACKAGE_SCHIFRA is not set
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
 
@@ -813,12 +854,17 @@ BR2_PACKAGE_POPT=y
 # BR2_PACKAGE_CJSON is not set
 BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_EZXML=y
+# BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
+# BR2_PACKAGE_JSON_GLIB is not set
+# BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 BR2_PACKAGE_LIBXML2=y
+# BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXSLT is not set
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
+# BR2_PACKAGE_RAPIDJSON is not set
 # BR2_PACKAGE_XERCES is not set
 # BR2_PACKAGE_YAJL is not set
 
@@ -839,6 +885,7 @@ BR2_PACKAGE_SHARED_MIME_INFO=y
 #
 # Networking applications
 #
+# BR2_PACKAGE_AIRCRACK_NG is not set
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_AUTHSAE is not set
@@ -846,12 +893,14 @@ BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_AUTOIPD=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 # BR2_PACKAGE_AXEL is not set
+# BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BLUEZ_UTILS is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BMON is not set
 BR2_PACKAGE_BRIDGE_UTILS=y
 # BR2_PACKAGE_CAN_UTILS is not set
+# BR2_PACKAGE_CHRONY is not set
 
 #
 # connman needs a toolchain with IPv6, WCHAR, thread and resolver support
@@ -892,11 +941,13 @@ BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IW=y
 # BR2_PACKAGE_KISMET is not set
 # BR2_PACKAGE_LIGHTTPD is not set
+# BR2_PACKAGE_LINKNX is not set
 # BR2_PACKAGE_LINKS is not set
 # BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
+# BR2_PACKAGE_MONGOOSE is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
@@ -918,6 +969,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_NETSTAT_NAT is not set
 # BR2_PACKAGE_NETWORK_MANAGER is not set
 # BR2_PACKAGE_NFACCT is not set
+# BR2_PACKAGE_NMAP is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
@@ -925,6 +977,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
+# BR2_PACKAGE_OPENOBEX is not set
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
@@ -1015,6 +1068,7 @@ BR2_PACKAGE_SAMBA_GAMIN=y
 # BR2_PACKAGE_UDPCAST is not set
 # BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
+# BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
@@ -1023,6 +1077,7 @@ BR2_PACKAGE_SAMBA_GAMIN=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 BR2_PACKAGE_WIRELESS_TOOLS=y
 # BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
+# BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 # BR2_PACKAGE_WPA_SUPPLICANT_EAP is not set
 # BR2_PACKAGE_WPA_SUPPLICANT_CLI is not set
@@ -1032,6 +1087,7 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 # BR2_PACKAGE_WPA_SUPPLICANT_WPS is not set
+# BR2_PACKAGE_WVDIAL is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
 
@@ -1057,6 +1113,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 # BR2_PACKAGE_BASH is not set
 # BR2_PACKAGE_DASH is not set
 # BR2_PACKAGE_DIALOG is not set
+# BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
@@ -1096,32 +1153,10 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 #
 # BR2_PACKAGE_SYSTEMD is not set
 BR2_PACKAGE_UTIL_LINUX=y
-# BR2_PACKAGE_UTIL_LINUX_BASIC is not set
-# BR2_PACKAGE_UTIL_LINUX_MOUNT is not set
-# BR2_PACKAGE_UTIL_LINUX_FSCK is not set
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
 # BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-# BR2_PACKAGE_UTIL_LINUX_UUIDD is not set
-BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-# BR2_PACKAGE_UTIL_LINUX_AGETTY is not set
-# BR2_PACKAGE_UTIL_LINUX_CRAMFS is not set
-# BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_FALLOCATE is not set
-# BR2_PACKAGE_UTIL_LINUX_UNSHARE is not set
-# BR2_PACKAGE_UTIL_LINUX_RENAME is not set
-# BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WALL is not set
-# BR2_PACKAGE_UTIL_LINUX_PARTX is not set
-# BR2_PACKAGE_UTIL_LINUX_ARCH is not set
-# BR2_PACKAGE_UTIL_LINUX_INIT is not set
-# BR2_PACKAGE_UTIL_LINUX_KILL is not set
-# BR2_PACKAGE_UTIL_LINUX_LAST is not set
-# BR2_PACKAGE_UTIL_LINUX_MESG is not set
-# BR2_PACKAGE_UTIL_LINUX_RAW is not set
-# BR2_PACKAGE_UTIL_LINUX_RESET is not set
-# BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WRITE is not set
+# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
 
 #
 # Text editors and viewers
@@ -1159,7 +1194,12 @@ BR2_PACKAGE_WEB_SERVICE=y
 # Host utilities
 #
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
+# BR2_PACKAGE_HOST_DOSFSTOOLS is not set
+BR2_PACKAGE_HOST_E2FSPROGS=y
+# BR2_PACKAGE_HOST_GENIMAGE is not set
+# BR2_PACKAGE_HOST_GENPART is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
+# BR2_PACKAGE_HOST_MTOOLS is not set
 # BR2_PACKAGE_HOST_OPENOCD is not set
 # BR2_PACKAGE_HOST_SAM_BA is not set
 # BR2_PACKAGE_HOST_UBOOT_TOOLS is not set
@@ -1171,6 +1211,13 @@ BR2_PACKAGE_WEB_SERVICE=y
 # BR2_TARGET_ROOTFS_CPIO is not set
 # BR2_TARGET_ROOTFS_CRAMFS is not set
 BR2_TARGET_ROOTFS_EXT2=y
+BR2_TARGET_ROOTFS_EXT2_2=y
+BR2_TARGET_ROOTFS_EXT2_2r0=y
+# BR2_TARGET_ROOTFS_EXT2_2r1 is not set
+# BR2_TARGET_ROOTFS_EXT2_3 is not set
+# BR2_TARGET_ROOTFS_EXT2_4 is not set
+BR2_TARGET_ROOTFS_EXT2_GEN=2
+BR2_TARGET_ROOTFS_EXT2_REV=0
 BR2_TARGET_ROOTFS_EXT2_BLOCKS=0
 BR2_TARGET_ROOTFS_EXT2_INODES=0
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=0
@@ -1178,6 +1225,8 @@ BR2_TARGET_ROOTFS_EXT2_NONE=y
 # BR2_TARGET_ROOTFS_EXT2_GZIP is not set
 # BR2_TARGET_ROOTFS_EXT2_BZIP2 is not set
 # BR2_TARGET_ROOTFS_EXT2_LZMA is not set
+# BR2_TARGET_ROOTFS_EXT2_LZO is not set
+# BR2_TARGET_ROOTFS_EXT2_XZ is not set
 # BR2_TARGET_ROOTFS_INITRAMFS is not set
 # BR2_TARGET_ROOTFS_ISO9660 is not set
 # BR2_TARGET_ROOTFS_JFFS2 is not set
@@ -1188,6 +1237,8 @@ BR2_TARGET_ROOTFS_TAR=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 # BR2_TARGET_ROOTFS_TAR_BZIP2 is not set
 # BR2_TARGET_ROOTFS_TAR_LZMA is not set
+# BR2_TARGET_ROOTFS_TAR_LZO is not set
+# BR2_TARGET_ROOTFS_TAR_XZ is not set
 BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # BR2_TARGET_ROOTFS_UBIFS is not set
 
@@ -1203,7 +1254,7 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # Kernel
 #
 BR2_LINUX_KERNEL=y
-# BR2_LINUX_KERNEL_3_7 is not set
+# BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
@@ -1219,23 +1270,30 @@ BR2_LINUX_KERNEL_BZIMAGE=y
 # BR2_LINUX_KERNEL_VMLINUX is not set
 # BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM is not set
 # BR2_LINUX_KERNEL_DTS_SUPPORT is not set
-BR2_LINUX_KERNEL_LOADADDR=""
 # BR2_LINUX_KERNEL_INSTALL_TARGET is not set
 
 #
 # Linux Kernel Extensions
 #
 # BR2_LINUX_KERNEL_EXT_XENOMAI is not set
-# BR2_LINUX_KERNEL_EXT_OCF_LINUX is not set
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
 
 #
 # Legacy config options
 #
+# BR2_sa110 is not set
+# BR2_sa1100 is not set
+# BR2_PACKAGE_GDISK is not set
+# BR2_PACKAGE_GDISK_GDISK is not set
+# BR2_PACKAGE_GDISK_SGDISK is not set
+# BR2_PACKAGE_GDB_HOST is not set
+# BR2_PACKAGE_DIRECTB_DITHER_RGB16 is not set
+# BR2_PACKAGE_DIRECTB_TESTS is not set
 # BR2_PACKAGE_CUSTOMIZE is not set
 # BR2_PACKAGE_XSERVER_xorg is not set
 # BR2_PACKAGE_XSERVER_tinyx is not set
-# BR2_PACKAGE_PTHREAD_STUBS is not set
 # BR2_PACKAGE_GETTEXT_STATIC is not set
 # BR2_PACKAGE_LIBINTL is not set
 # BR2_PACKAGE_INPUT_TOOLS_EVTEST is not set
+# BR2_BFIN_FDPIC is not set
+# BR2_BFIN_FLAT is not set
