--- a/raumfeld/br2-initramfs-geode.config
+++ b/raumfeld/br2-initramfs-geode.config
@@ -1,8 +1,10 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00049-g28fa7bf-dirty Configuration
+# Buildroot 2013.05-02615-g91062e0-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
+# BR2_arcle is not set
+# BR2_arceb is not set
 # BR2_arm is not set
 # BR2_armeb is not set
 # BR2_aarch64 is not set
@@ -101,13 +103,13 @@ BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_S is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
+BR2_GLOBAL_PATCH_DIR=""
 
 #
 # Toolchain
 #
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
-# BR2_TOOLCHAIN_CTNG is not set
 
 #
 # Kernel Header Options
@@ -115,8 +117,8 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_KERNEL_HEADERS_3_0 is not set
 # BR2_KERNEL_HEADERS_3_2 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
-# BR2_KERNEL_HEADERS_3_6 is not set
-# BR2_KERNEL_HEADERS_3_7 is not set
+# BR2_KERNEL_HEADERS_3_8 is not set
+# BR2_KERNEL_HEADERS_3_9 is not set
 BR2_KERNEL_HEADERS_VERSION=y
 # BR2_KERNEL_HEADERS_SNAP is not set
 BR2_DEFAULT_KERNEL_VERSION="3.9.6"
@@ -130,7 +132,6 @@ BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
 BR2_UCLIBC_VERSION_STRING="0.9.32.1"
 BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
-# BR2_PTHREAD_DEBUG is not set
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 
 #
@@ -141,17 +142,20 @@ BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
 BR2_BINUTILS_VERSION_2_21_1=y
 # BR2_BINUTILS_VERSION_2_22 is not set
 # BR2_BINUTILS_VERSION_2_23_1 is not set
+# BR2_BINUTILS_VERSION_2_23_2 is not set
 BR2_BINUTILS_VERSION="2.21.1"
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
 # GCC Options
 #
+BR2_GCC_NEEDS_MPC=y
 # BR2_GCC_VERSION_4_3_X is not set
 # BR2_GCC_VERSION_4_4_X is not set
 # BR2_GCC_VERSION_4_5_X is not set
 # BR2_GCC_VERSION_4_6_X is not set
 BR2_GCC_VERSION_4_7_X=y
+# BR2_GCC_VERSION_4_8_X is not set
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.7.3"
@@ -161,18 +165,11 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 # BR2_GCC_SHARED_LIBGCC is not set
 BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_OPENMP is not set
-
-#
-# Gdb Options
-#
-# BR2_PACKAGE_GDB is not set
-# BR2_PACKAGE_GDB_SERVER is not set
-# BR2_PACKAGE_GDB_HOST is not set
+# BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_TOOLCHAIN_HAS_THREADS=y
-BR2_TOOLCHAIN_HAS_THREADS_DEBUG_IF_NEEDED=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 # BR2_ENABLE_LOCALE_PURGE is not set
 BR2_GENERATE_LOCALE=""
@@ -196,6 +193,7 @@ BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
 BR2_PTHREADS_NATIVE=y
+# BR2_PTHREAD_DEBUG is not set
 
 #
 # System configuration
@@ -256,7 +254,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_AUMIX is not set
 
 #
-# bellagio requires a toolchain with C++ support enabled
+# bellagio requires a toolchain with C++ and threads support enabled
 #
 # BR2_PACKAGE_FAAD2 is not set
 # BR2_PACKAGE_FLAC is not set
@@ -297,12 +295,21 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DMALLOC is not set
+
+#
+# gdb/gdbserver require a toolchain with thread and thread debug support
+#
+# BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-# BR2_PACKAGE_LTP_TESTSUITE is not set
+
+#
+# ltp-testsuite requires a toolchain with IPV6, RPC and thread support
+#
 # BR2_PACKAGE_LTTNG_MODULES is not set
+# BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_MEMSTAT is not set
 # BR2_PACKAGE_NETPERF is not set
@@ -334,14 +341,12 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
 # BR2_PACKAGE_GETTEXT is not set
-# BR2_PACKAGE_GMP is not set
 
 #
 # gperf requires a toolchain with C++ support enabled
 #
 # BR2_PACKAGE_GREP is not set
-# BR2_PACKAGE_MPC is not set
-# BR2_PACKAGE_MPFR is not set
+# BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_LIBTOOL is not set
 # BR2_PACKAGE_M4 is not set
 # BR2_PACKAGE_PATCH is not set
@@ -349,7 +354,6 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_SED is not set
 # BR2_PACKAGE_SSTRIP is not set
 # BR2_PACKAGE_TAR is not set
-# BR2_PACKAGE_VALA is not set
 # BR2_PACKAGE_YASM is not set
 
 #
@@ -365,6 +369,8 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # Graphic applications
 #
+# BR2_PACKAGE_GNUPLOT is not set
+# BR2_PACKAGE_JHEAD is not set
 # BR2_PACKAGE_RRDTOOL is not set
 
 #
@@ -374,7 +380,10 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # cegui06 needs a toolchain with C++ and threads
 #
-# BR2_PACKAGE_DIRECTFB is not set
+
+#
+# directfb needs a toolchain with C++ and thread support
+#
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
 # BR2_PACKAGE_FBSET is not set
@@ -396,12 +405,21 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # qt requires a toolchain with C++ support enabled
 #
+
+#
+# Qt5 needs a toolchain with WCHAR, IPv6, thread and C++ support
+#
 # BR2_PACKAGE_XORG7 is not set
+
+#
+# weston requires udev
+#
 
 #
 # X libraries and helper libraries
 #
 # BR2_PACKAGE_LIBERATION is not set
+# BR2_PACKAGE_XKEYBOARD_CONFIG is not set
 
 #
 # X Window managers
@@ -424,6 +442,9 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_CURLFTPFS is not set
 # BR2_PACKAGE_DOSFSTOOLS is not set
 # BR2_PACKAGE_E2FSPROGS is not set
+# BR2_PACKAGE_EXFAT is not set
+# BR2_PACKAGE_EXFAT_UTILS is not set
+# BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENROMFS is not set
@@ -457,17 +478,18 @@ BR2_PACKAGE_DMIDECODE=y
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EEPROG is not set
 # BR2_PACKAGE_EVTEST is not set
+# BR2_PACKAGE_FAN_CTRL is not set
 BR2_PACKAGE_FLASHROM=y
 # BR2_PACKAGE_FCONFIG is not set
 # BR2_PACKAGE_FIS is not set
 # BR2_PACKAGE_FMTOOLS is not set
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
+# BR2_PACKAGE_GPSD is not set
 
 #
-# gdisk requires a toolchain with LARGEFILE/WCHAR/C++ support enabled
+# gptfdisk requires a toolchain with LARGEFILE/WCHAR/C++ support enabled
 #
-# BR2_PACKAGE_GPSD is not set
 # BR2_PACKAGE_GVFS is not set
 # BR2_PACKAGE_HDPARM is not set
 # BR2_PACKAGE_HWDATA is not set
@@ -535,10 +557,15 @@ BR2_PACKAGE_PCIUTILS=y
 # Interpreter languages and scripting
 #
 # BR2_PACKAGE_ERLANG is not set
+# BR2_PACKAGE_ENSCRIPT is not set
 # BR2_PACKAGE_HASERL is not set
 # BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
+
+#
+# nodejs requires a toolchain with C++, IPv6, large files, and threading
+#
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
@@ -597,6 +624,7 @@ BR2_PACKAGE_ZLIB=y
 # Crypto
 #
 # BR2_PACKAGE_BEECRYPT is not set
+# BR2_PACKAGE_CRYPTODEV is not set
 # BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
 # BR2_PACKAGE_LIBGPG_ERROR is not set
@@ -605,7 +633,6 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBNSS is not set
 # BR2_PACKAGE_LIBSHA1 is not set
 # BR2_PACKAGE_NETTLE is not set
-# BR2_PACKAGE_OCF_LINUX is not set
 # BR2_PACKAGE_OPENSSL is not set
 # BR2_PACKAGE_POLARSSL is not set
 
@@ -618,6 +645,7 @@ BR2_PACKAGE_ZLIB=y
 #
 # Mysql client requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_REDIS is not set
 # BR2_PACKAGE_SQLCIPHER is not set
 # BR2_PACKAGE_SQLITE is not set
 
@@ -641,6 +669,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_IMLIB2 is not set
 # BR2_PACKAGE_JPEG is not set
+# BR2_PACKAGE_LCMS2 is not set
 # BR2_PACKAGE_LIBART is not set
 # BR2_PACKAGE_LIBDMTX is not set
 # BR2_PACKAGE_LIBEXIF is not set
@@ -670,11 +699,17 @@ BR2_PACKAGE_ZLIB=y
 # pango requires a toolchain with WCHAR and C++ support
 #
 # BR2_PACKAGE_PIXMAN is not set
+
+#
+# poppler requires a toolchain with C++ support enabled
+#
 # BR2_PACKAGE_TIFF is not set
+# BR2_PACKAGE_WAYLAND is not set
 
 #
 # webkit requires C++, WCHAR in toolchain and libgtk2
 #
+# BR2_PACKAGE_WEBP is not set
 
 #
 # zxing requires a toolchain with C++ support
@@ -701,11 +736,20 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBNFC_LLCP is not set
+
+#
+# libserial requires a toolchain with C++ support enabled
+#
 # BR2_PACKAGE_LIBUSB is not set
 # BR2_PACKAGE_LIBV4L is not set
+# BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
+
+#
+# urg requires a toolchain with C++ support
+#
 
 #
 # Javascript
@@ -713,9 +757,12 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_EXPLORERCANVAS is not set
 # BR2_PACKAGE_FLOT is not set
 # BR2_PACKAGE_JQUERY is not set
+# BR2_PACKAGE_JQUERY_KEYBOARD is not set
 # BR2_PACKAGE_JQUERY_SPARKLINE is not set
+# BR2_PACKAGE_JQUERY_UI is not set
 # BR2_PACKAGE_JQUERY_VALIDATION is not set
 # BR2_PACKAGE_JSMIN is not set
+# BR2_PACKAGE_JSON_JAVASCRIPT is not set
 
 #
 # Multimedia
@@ -746,6 +793,18 @@ BR2_PACKAGE_ZLIB=y
 
 #
 # Networking
+#
+
+#
+# czmq requires a toolchain with C++, IPV6, LARGEFILE and WCHAR support
+#
+
+#
+# cppzmq requires a toolchain with C++, IPV6, LARGEFILE and WCHAR support
+#
+
+#
+# filemq requires a toolchain with C++, IPv6, LARGEFILE, WCHAR & thread support
 #
 # BR2_PACKAGE_GLIB_NETWORKING is not set
 # BR2_PACKAGE_LIBCGI is not set
@@ -787,12 +846,26 @@ BR2_PACKAGE_ZLIB=y
 #
 # BR2_PACKAGE_LIBUPNP is not set
 # BR2_PACKAGE_LIBVNCSERVER is not set
+# BR2_PACKAGE_LIBWEBSOCKETS is not set
+# BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_SLIRP is not set
 # BR2_PACKAGE_USBREDIR is not set
 
 #
-# zeromq requires a toolchain with C++, LARGEFILE + WCHAR support
+# wvstreams requires a toolchain with C++ and largefile support enabled
+#
+
+#
+# zeromq requires a toolchain with C++, IPV6, LARGEFILE, WCHAR & thread support
+#
+
+#
+# zmqpp requires a toolchain with C++, IPV6, LARGEFILE, WCHAR & thread support
+#
+
+#
+# zyre requires a toolchain with C++, IPv6, LARGEFILE, WCHAR & thread support
 #
 
 #
@@ -808,6 +881,16 @@ BR2_PACKAGE_ZLIB=y
 #
 # boost requires a toolchain with C++, large file and thread support enabled
 #
+
+#
+# glibmm requires a toolchain with C++ & WCHAR support enabled
+#
+# BR2_PACKAGE_GMP is not set
+# BR2_PACKAGE_GSL is not set
+
+#
+# gtest requires a toolchain with c++, WCHAR and THREADS support
+#
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
 # BR2_PACKAGE_LIBCAP is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
@@ -816,14 +899,17 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBEVENT is not set
 # BR2_PACKAGE_LIBEV is not set
 # BR2_PACKAGE_LIBFFI is not set
-# BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_LIBGLIB2 is not set
 # BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBNSPR is not set
+# BR2_PACKAGE_LIBPFM4 is not set
+# BR2_PACKAGE_LIBPTHSEM is not set
 
 #
 # libsigc++ requires a toolchain with C++ support enabled
 #
+# BR2_PACKAGE_LIBSIGSEGV is not set
+# BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
 # BR2_PACKAGE_LIBUNWIND is not set
 # BR2_PACKAGE_LIBSECCOMP is not set
@@ -832,16 +918,26 @@ BR2_PACKAGE_ZLIB=y
 #
 # linux-pam requires a toolchain with WCHAR and locale support
 #
+
+#
+# log4cxx requires C++ support in toolchain
+#
 # BR2_PACKAGE_LTTNG_LIBUST is not set
+# BR2_PACKAGE_MPC is not set
+# BR2_PACKAGE_MPFR is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
 # BR2_PACKAGE_ORC is not set
 
 #
-# poco requires a toolchain with WCHAR and C++ support
+# poco requires a toolchain with WCHAR, threads, and C++ support
 #
 
 #
 # protobuf requires a toolchain with C++ support enabled
+#
+
+#
+# protobuf-c requires a toolchain with C++ support enabled
 #
 
 #
@@ -876,12 +972,23 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_CJSON is not set
 # BR2_PACKAGE_EXPAT is not set
 # BR2_PACKAGE_EZXML is not set
+# BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
+# BR2_PACKAGE_JSON_GLIB is not set
+
+#
+# libjson requires a toolchain with C++ support
+#
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBXML2 is not set
+
+#
+# libxml++ requires a toolchain with C++ & WCHAR support enabled
+#
 # BR2_PACKAGE_LIBXSLT is not set
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
+# BR2_PACKAGE_RAPIDJSON is not set
 
 #
 # xerces-c++ requires a toolchain with C++ and WCHAR support enabled
@@ -905,17 +1012,23 @@ BR2_PACKAGE_ZLIB=y
 #
 # Networking applications
 #
+# BR2_PACKAGE_AIRCRACK_NG is not set
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_AUTHSAE is not set
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
+
+#
+# bcusdk requires a toolchain with C++ support
+#
 # BR2_PACKAGE_BLUEZ_UTILS is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
 # BR2_PACKAGE_CAN_UTILS is not set
+# BR2_PACKAGE_CHRONY is not set
 
 #
 # connman needs a toolchain with IPv6, WCHAR, thread and resolver support
@@ -927,6 +1040,14 @@ BR2_PACKAGE_ZLIB=y
 #
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CUPS is not set
+
+#
+# gutenprint requires a toolchain with C++ support enabled
+#
+
+#
+# hplip requires a toolchain with C++ and thread support enabled
+#
 # BR2_PACKAGE_DHCP is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
@@ -955,9 +1076,13 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_IW is not set
 
 #
-# Kismet requires a toolchain with C++ support enabled
+# Kismet requires a toolchain with thread and C++ support enabled
 #
 # BR2_PACKAGE_LIGHTTPD is not set
+
+#
+# linknx requires a toolchain with C++ support
+#
 # BR2_PACKAGE_LINKS is not set
 
 #
@@ -966,6 +1091,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
+# BR2_PACKAGE_MONGOOSE is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
@@ -986,6 +1112,10 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_NETSNMP is not set
 # BR2_PACKAGE_NETSTAT_NAT is not set
 # BR2_PACKAGE_NFACCT is not set
+
+#
+# nmap requires a toolchain with C++, IPV6 and thread support
+#
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
@@ -993,6 +1123,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
+# BR2_PACKAGE_OPENOBEX is not set
 # BR2_PACKAGE_OPENSSH is not set
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
@@ -1043,6 +1174,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_UDPCAST is not set
 # BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
+# BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
@@ -1050,7 +1182,12 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_WGET is not set
 BR2_PACKAGE_WIRELESS_REGDB=y
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
+# BR2_PACKAGE_WIRESHARK is not set
 # BR2_PACKAGE_WPA_SUPPLICANT is not set
+
+#
+# wvdial requires a toolchain with C++ and largefile support enabled
+#
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
 
@@ -1076,6 +1213,7 @@ BR2_PACKAGE_WIRELESS_REGDB=y
 # BR2_PACKAGE_BASH is not set
 # BR2_PACKAGE_DASH is not set
 # BR2_PACKAGE_DIALOG is not set
+# BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
@@ -1118,32 +1256,10 @@ BR2_PACKAGE_WIRELESS_REGDB=y
 # systemd not available (depends on /dev management with udev and ipv6 support, and thread support in toolchain)
 #
 BR2_PACKAGE_UTIL_LINUX=y
-# BR2_PACKAGE_UTIL_LINUX_BASIC is not set
-# BR2_PACKAGE_UTIL_LINUX_MOUNT is not set
-# BR2_PACKAGE_UTIL_LINUX_FSCK is not set
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
 # BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-# BR2_PACKAGE_UTIL_LINUX_UUIDD is not set
-BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-# BR2_PACKAGE_UTIL_LINUX_AGETTY is not set
-# BR2_PACKAGE_UTIL_LINUX_CRAMFS is not set
-# BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_FALLOCATE is not set
-# BR2_PACKAGE_UTIL_LINUX_UNSHARE is not set
-# BR2_PACKAGE_UTIL_LINUX_RENAME is not set
-# BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WALL is not set
-# BR2_PACKAGE_UTIL_LINUX_PARTX is not set
-# BR2_PACKAGE_UTIL_LINUX_ARCH is not set
-# BR2_PACKAGE_UTIL_LINUX_INIT is not set
-# BR2_PACKAGE_UTIL_LINUX_KILL is not set
-# BR2_PACKAGE_UTIL_LINUX_LAST is not set
-# BR2_PACKAGE_UTIL_LINUX_MESG is not set
-# BR2_PACKAGE_UTIL_LINUX_RAW is not set
-# BR2_PACKAGE_UTIL_LINUX_RESET is not set
-# BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS is not set
-# BR2_PACKAGE_UTIL_LINUX_WRITE is not set
+# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
 
 #
 # Text editors and viewers
@@ -1180,7 +1296,12 @@ BR2_PACKAGE_RAUMFELD_EXTRACT=y
 # Host utilities
 #
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
+# BR2_PACKAGE_HOST_DOSFSTOOLS is not set
+# BR2_PACKAGE_HOST_E2FSPROGS is not set
+# BR2_PACKAGE_HOST_GENIMAGE is not set
+# BR2_PACKAGE_HOST_GENPART is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
+# BR2_PACKAGE_HOST_MTOOLS is not set
 # BR2_PACKAGE_HOST_OPENOCD is not set
 # BR2_PACKAGE_HOST_SAM_BA is not set
 # BR2_PACKAGE_HOST_UBOOT_TOOLS is not set
@@ -1194,6 +1315,8 @@ BR2_TARGET_ROOTFS_CPIO_NONE=y
 # BR2_TARGET_ROOTFS_CPIO_GZIP is not set
 # BR2_TARGET_ROOTFS_CPIO_BZIP2 is not set
 # BR2_TARGET_ROOTFS_CPIO_LZMA is not set
+# BR2_TARGET_ROOTFS_CPIO_LZO is not set
+# BR2_TARGET_ROOTFS_CPIO_XZ is not set
 # BR2_TARGET_ROOTFS_CRAMFS is not set
 # BR2_TARGET_ROOTFS_EXT2 is not set
 BR2_TARGET_ROOTFS_INITRAMFS=y
@@ -1216,7 +1339,7 @@ BR2_TARGET_ROOTFS_INITRAMFS=y
 # Kernel
 #
 BR2_LINUX_KERNEL=y
-# BR2_LINUX_KERNEL_3_7 is not set
+# BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
@@ -1232,22 +1355,29 @@ BR2_LINUX_KERNEL_BZIMAGE=y
 # BR2_LINUX_KERNEL_VMLINUX is not set
 # BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM is not set
 # BR2_LINUX_KERNEL_DTS_SUPPORT is not set
-BR2_LINUX_KERNEL_LOADADDR=""
 
 #
 # Linux Kernel Extensions
 #
 # BR2_LINUX_KERNEL_EXT_XENOMAI is not set
-# BR2_LINUX_KERNEL_EXT_OCF_LINUX is not set
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
 
 #
 # Legacy config options
 #
+# BR2_sa110 is not set
+# BR2_sa1100 is not set
+# BR2_PACKAGE_GDISK is not set
+# BR2_PACKAGE_GDISK_GDISK is not set
+# BR2_PACKAGE_GDISK_SGDISK is not set
+# BR2_PACKAGE_GDB_HOST is not set
+# BR2_PACKAGE_DIRECTB_DITHER_RGB16 is not set
+# BR2_PACKAGE_DIRECTB_TESTS is not set
 # BR2_PACKAGE_CUSTOMIZE is not set
 # BR2_PACKAGE_XSERVER_xorg is not set
 # BR2_PACKAGE_XSERVER_tinyx is not set
-# BR2_PACKAGE_PTHREAD_STUBS is not set
 # BR2_PACKAGE_GETTEXT_STATIC is not set
 # BR2_PACKAGE_LIBINTL is not set
 # BR2_PACKAGE_INPUT_TOOLS_EVTEST is not set
+# BR2_BFIN_FDPIC is not set
+# BR2_BFIN_FLAT is not set
